--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 
-<div class="sidebar-wrapper">
+<div class="sidebar-wrapper" [hidden]="hideSideBar">
     <div class="logo">
         <a href="http://www.creative-tim.com" class="simple-text">
             <div class="logo-img">
